# share-rl-pose-estimation

./: .gitignore  AGENTS.md  README.md  hand_eye_calibration_result_ur3e.json  hand_eye_calibration_result_ur3e_fingertip.json  hand_eye_calibration_result_ur5e.json  hand_eye_depricated.py  pyproject.toml  robot_poses.json  save_robot_poses_depricated.py  setup.py
examples/: _mock_mp_net_utils.py  demo_jzilke.py  demo_jzilke_2.py  demo_keyboard.py  demo_mp_net.py  demo_mp_net_mock_bookshelf.py  demo_mp_net_mock_dual_arm_handover.py  demo_mp_net_mock_tea_pour.py  demo_mp_net_real.py  demo_task_frame_controller.py  grasp_demo.py
src/experiments/envs/: fiddle_out.py
src/experiments/envs/foundationpose/: primitives.py  ur5e_foundationpose_pick.py
src/share/cameras/: __init__.py  camera_realsense_depth.py  configuration_realsense_depth.py  mock_camera.py
src/share/configs/: design_constraints.py  record.py  rl.py
src/share/debug/: __init__.py  mpnet_debug.py
src/share/envs/: ENVS.md  __init__.py  utils.py
src/share/envs/manipulation_primitive/: __init__.py  config_manipulation_primitive.py  env_manipulation_primitive.py  task_frame.py
src/share/envs/manipulation_primitive_net/: __init__.py  config_manipulation_primitive_net.py  env_manipulation_primitive_net.py  transitions.py
src/share/grippers/: robotiq_controller.py
src/share/motors/dynamixel/: dynamixel.py
src/share/policies/: __init__.py
src/share/pose_estimation/: foundationpose_client.py  grasp_obj_spec.py  pose_estimator.py  sam3_client.py
src/share/processor/: action.py  info.py  observation.py  utils.py
src/share/rl/: runtime.py
src/share/robots/ur/: README.md  __init__.py  pyproject.toml
src/share/robots/ur/lerobot_robot_ur/: __init__.py  config_mock_ur.py  config_ur.py  controller.py  mock_ur.py  ur.py
src/share/robots/viperx/: __init__.py  pyproject.toml
src/share/robots/viperx/lerobot_robot_viperx/: __init__.py  config_mock_viperx.py  config_viperx.py  mock_viperx.py  viperx.py
src/share/scripts/: actor_server.py  design_constraints.py  eval_on_dataset.py  learner_server.py  mpn_rl_runtime.py  record.py
src/share/scripts/utils/: enumerate_evdev_devices.py  enumerate_hid_devices.py
src/share/teleoperators/: __init__.py  utils.py
src/share/teleoperators/delta_keyboard/: __init__.py  pyproject.toml
src/share/teleoperators/delta_keyboard/lerobot_teleoperator_delta_keyboard/: __init__.py  config_delta_keyboard.py  teleop_delta_keyboard.py
src/share/teleoperators/gello/: __init__.py  config_gello.py  gello.py
src/share/teleoperators/spacemouse/: __init__.py  pyproject.toml
src/share/teleoperators/spacemouse/lerobot_teleoperator_spacemouse/: __init__.py  configuration_spacemouse.py  pyspacemouse.py  teleop_spacemouse.py
src/share/teleoperators/widowx/: __init__.py  pyproject.toml
src/share/teleoperators/widowx/lerobot_teleoperator_widowx/: __init__.py  config_widowx.py  widowx.py
src/share/utils/: constants.py  control_utils.py  kinematics.py  mock_utils.py  shared_memory.py  transformation_utils.py  video_utils.py
src/share/workspace/: __init__.py  mpnet.py  runtime.py
tests/share/debug/: test_mpnet_debug.py
tests/share/envs/: conftest.py  test_dynamic_primitive_types.py  test_epic_g_processor_steps.py  test_han_insertion_mp_net_config.py  test_intervention_action_step.py  test_manipulation_primitive_config.py  test_manipulation_primitive_net_config.py  test_manipulation_primitive_net_step.py  test_manipulation_primitive_net_transitions.py  test_match_teleop_to_policy_action_step.py  test_mock_pipeline_entities.py  test_release_readiness_epic5.py  test_task_frame_action_dim.py  test_task_frame_ur_integration.py  test_task_frame_v2_mock_controller.py  test_to_joint_action_step.py  test_ur_joint_space_control.py
tests/share/policies/: helpers.py
tests/share/scripts/: conftest.py  test_design_constraints.py  test_mpn_rl_servers_e2e.py  test_record_debug.py
tests/share/workspace/: test_apps.py  test_mpnet_debug_summary.py
tools/: hand_eye_calibration.py  hand_eye_lib.py  run_pose_publishers_tmux.sh  save_robot_poses.py  test_sam3_client.py
wiki/: Makefile  README.md  architecture.rst  conf.py  examples.rst  index.rst  open_problems.rst  quickstart.rst
