# Copyright 2026 Spes Robotics. All rights reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.urls]
homepage = "https://github.com/jstranghoener/share-rl"
source = "https://github.com/jstranghoener/share-rl"
issues = "https://github.com/jstranghoener/share-rl/issues"

[project]
name = "share-rl"
version = "0.0.4"
description = "share: LeRobot extension for structured manipulation, teleoperation, and workspace tooling"
dynamic = ["readme"]
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
authors = [
    { name = "Spes Robotics", email = "contact@spes.ai" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = ["lerobot", "share", "robotics", "teleoperation", "offline rl"]
dependencies = [
    "lerobot>=0.5.0",
    "modern_robotics>=1.1.1,<2.0.0",
    "scipy>=1.11.0,<2.0.0",
    "atomics>=1.0.0",
    "pyrealsense2>=2.56.5"
]

[project.optional-dependencies]
ur = [
    "lerobot_robot_ur @ file:src/share/robots/ur",
]
spacemouse = [
    "lerobot_teleoperator_spacemouse @ file:src/share/teleoperators/spacemouse",
]
aloha = [
    "lerobot_robot_viperx @ file:src/share/robots/viperx",
    "lerobot_teleoperator_widowx @ file:src/share/teleoperators/widowx",
]
test = [
    "pytest>=8.1.0,<9.0.0",
    "pytest-timeout>=2.4.0,<3.0.0",
    "pytest-cov>=5.0.0,<8.0.0",
]
all = [
    "share-rl[ur]",
    "share-rl[spacemouse]",
    "share-rl[aloha]",
    "share-rl[test]",
]

[project.scripts]
share-record = "share.scripts.record:record"
share-train = "share.scripts.train:main"
share-eval = "share.scripts.eval_on_dataset:main"
share-workspace = "share.scripts.robot_workspace:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["share*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
