[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lerobot_robot_ur"
version = "0.0.4"
description = "LeRobot Universal Robot e-series integration"
license = { file = "LICENSE" }
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
]
dependencies = [
  "lerobot>=0.5",
  "scipy>=1.11.0,<2.0.0",
  "ur_rtde==1.6.2",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["lerobot_robot_ur"]
exclude = ["*.egg-info"]
