[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lerobot_teleoperator_spacemouse"
version = "0.0.4"
description = "LeRobot SpaceMouse integration"
license = { file = "LICENSE" }
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
]
dependencies = [
  "lerobot>=0.5",
  "easyhid==0.0.10",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["lerobot_teleoperator_spacemouse"]
exclude = ["*.egg-info"]
