[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lerobot_teleoperator_widowx"
version = "0.0.4"
description = "LeRobot Trossen Widow-x Arm integration"
license = { file = "LICENSE" }
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
]
dependencies = [
  "lerobot>=0.5",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["lerobot_teleoperator_widowx"]
exclude = ["*.egg-info"]
